<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_background"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/search"
        android:textAllCaps="false"
        android:textColor="@color/button_text"
        android:textSize="22sp"
        app:icon="@drawable/search"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@color/button_text"
        app:cornerRadius="16dp" />

    <Button
        android:id="@+id/btn_media"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/media"
        android:textAllCaps="false"
        android:textColor="@color/button_text"
        android:textSize="22sp"
        app:icon="@drawable/library"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@color/button_text"
        app:cornerRadius="16dp" />

    <Button
        android:id="@+id/btn_settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/settings"
        android:textAllCaps="false"
        android:textColor="@color/button_text"
        android:textSize="22sp"
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@color/button_text"
        app:cornerRadius="16dp" />

</LinearLayout>